<?xml version="1.0"?>
<package format="2">
  <name>rovercontrol</name>
  <version>1.0.0</version>
  <description>Rover Robotics' Rover Navigation</description>
  <maintainer email="will@roverrobotics.com">William Rook</maintainer>
  <license>N/A</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>joy</depend>
  <depend>navigation2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>